--- a/template/contact.html
+++ b/template/contact.html
@@ -17,6 +17,8 @@
       padding: 30px;
       border-radius: 10px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      margin-top:45px;
+
     }
     .contact-container h1 {
       font-size: 2rem;
