--- a/template/partial/footer.html
+++ b/template/partial/footer.html
@@ -70,7 +70,7 @@ footer a:hover {
 <footer style="background-color: #343a40; color: white; padding: 20px; text-align: center; margin-top: 40px;">
     <p>&copy; 2025 My Website. All rights reserved.</p>
     <p>Follow us:
-      <a href="" style="color: #ffc107; margin: 0 5px;">Facebook</a> |
+      <a href="#" style="color: #ffc107; margin: 0 5px;">Facebook</a> |
       <a href="#" style="color: #ffc107; margin: 0 5px;">Twitter</a> |
       <a href="#" style="color: #ffc107; margin: 0 5px;">Instagram</a>
     </p>
