--- a/template/home.html
+++ b/template/home.html
@@ -1,7 +1,7 @@
 {#% extends "base.html" %#}
 {% include "partial/header.html" %}
-{% block content %}
 
+{% block content %}
   <style>
     body {
       margin: 0;
@@ -13,7 +13,8 @@
     .car-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 2rem;
+      gap: 3rem;
+      margin-top:45px ;
     }
 
     .car-item {
@@ -56,30 +57,23 @@
       font-weight: bold;
       color: #4F46E5;
     }
-
   </style>
 
-<body>
-
   <section class="car-grid">
-
-    <!-- Car 1 -->
     {% for car in cars %}
-    <a href="{% url 'car' car.id %}">
-    <div class="car-item">
-      <img src="{{car.image}}" alt="Car 1" class="car-image">
-      <div class="car-info">
-        <h3 class="car-title">{{car.make}}</h3>
-        <p class="car-model">{{car.model}}</p>
-        <p class="car-model">{{car.available}}</p>
-        <p class="car-price">$79,990</p>
-      </div>
-    </div>
-  </a>
+      <a href="{% url 'car' car.id %}">
+        <div class="car-item">
+          <img src="{{ car.image }}" alt="Car Image" class="car-image">
+          <div class="car-info">
+            <h3 class="car-title">{{ car.make }}</h3>
+            <p class="car-model">{{ car.model }}</p>
+            <p class="car-model">{{ car.available }}</p>
+            <p class="car-price">$79,990</p>
+          </div>
+        </div>
+      </a>
     {% endfor %}
-</section>
+  </section>
+{% endblock %}
 
-</body>
-
-{% endblock  %}
 {% include "partial/footer.html" %}
